--- a/src/scss/components/bootstrap/_forms.scss
+++ b/src/scss/components/bootstrap/_forms.scss
@@ -22,3 +22,10 @@ label, .label {
     color: $form-control-error-color;
   }
 }
+
+.ng-invalid.ng-dirty {
+border-color: $form-control-error-color;
+}
+.ng-valid.ng-dirty {
+border-color: #78FA89;
+}
