--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -10,3 +10,5 @@ $base-text-color:                  color(grey-600);
 $main-padding-horizontal-base:     15px;
 $form-control-error-color:         color(red-500);
 $modal-header-border-color:        $base-el-border-color;
+
+$form-control-success-color:       color(green-500);
