modify project views

--- a/src/scss/components/bootstrap/_alerts.scss
+++ b/src/scss/components/bootstrap/_alerts.scss
@@ -6,7 +6,7 @@
   @include alert-variant(transparent, transparent, $form-control-error-color);
 }
 
-.alert-success {
-  padding: 0;
-  @include alert-variant(transparent, transparent, $form-control-success-color);
-}
+// .alert-success {
+//   padding: 0;
+//   @include alert-variant(transparent, transparent, $form-control-success-color);
+// }
