--- a/src/scss/components/custom/project/_base.scss
+++ b/src/scss/components/custom/project/_base.scss
@@ -53,13 +53,13 @@ $project-indent-right:  $main-padding-horizontal-base;
   padding-right: $project-indent-right;
 }
 .project-info__title-icon {
-  font-size: 4px;
+  font-size: 14px;
   margin-top: 8px;
 }
-.project-info__body {
-  height: 0;
-  overflow: hidden;
-}
+// .project-info__body {
+//   height: 0;
+//   overflow: hidden;
+// }
 .project-edit {
   height: 0;
   overflow: hidden;
