--- a/src/scss/bootstrap/_custom.scss
+++ b/src/scss/bootstrap/_custom.scss
@@ -33,5 +33,5 @@ $btn-border-radius-small:               4px;
 $alert-padding:                         10px 20px 5px;
 
 $alert-success-bg:            color(green-300);
-$alert-success-text:          $base-text-color;
+// $alert-success-text:          $base-text-color;
 $alert-success-border:        color(green-300);
