add change priority - different methods

--- a/src/scss/components/custom/project/_task.scss
+++ b/src/scss/components/custom/project/_task.scss
@@ -2,11 +2,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 $project-indent-right 0 $project-indent-left;
+  padding: 0 $project-indent-right 0 10px;
   border-bottom: 1px solid $base-el-border-color;
   min-height: 50px;
   span.done {
     text-decoration: line-through;
+  };
+  &:hover {
+    background-color: rgba(color(grey-200), 0.4);
+    .project-task-actions {
+      opacity: 1;
+    }
   }
 }
 .project-task-edit {
@@ -24,4 +30,11 @@
     border: none;
     box-shadow: none;
   }
+}
+.project-task-actions {
+  flex-shrink: 0;
+  opacity: 0;
+  transition: opacity 0.15s;
+  margin-left: 10px;
+  padding-right: $project-indent-right;
 }
