--- a/src/scss/components/custom/project/_modals.scss
+++ b/src/scss/components/custom/project/_modals.scss
@@ -3,4 +3,8 @@ button.datetime {
 }
 ul.uib-datepicker-popup {
   list-style-type: none;
-}  
+}
+textarea {
+  overflow-x: hidden;
+  resize: none;
+}
