fix loading bootstrap glyphicon fonts

--- a/src/scss/bootstrap/_module.scss
+++ b/src/scss/bootstrap/_module.scss
@@ -4,6 +4,9 @@
 
 // Core variables and mixins
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/variables";
+
+@import "glyphicon_fonts";
+
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 
 // Reset and dependencies
