--- a/src/scss/components/custom/project/_base.scss
+++ b/src/scss/components/custom/project/_base.scss
@@ -64,3 +64,6 @@ $project-indent-right:  $main-padding-horizontal-base;
   height: 0;
   overflow: hidden;
 }
+.glyphicon-log-out {
+  font-size: 20px;
+}
