--- a/src/scss/components/custom/project/_task.scss
+++ b/src/scss/components/custom/project/_task.scss
@@ -38,3 +38,6 @@
   margin-left: 10px;
   padding-right: $project-indent-right;
 }
+.glyphicon-arrow-up, .glyphicon-arrow-down {
+  font-size: 10px;
+}
