--- a/src/scss/components/custom/project/_modals.scss
+++ b/src/scss/components/custom/project/_modals.scss
@@ -1,9 +1,3 @@
-button.datetime {
-  padding: 0 40px;
-}
-ul.uib-datepicker-popup {
-  list-style-type: none;
-}
 textarea {
   overflow-x: hidden;
   resize: none;
@@ -13,4 +7,30 @@ textarea {
 }
 img.attachment {
   max-height: 200px;
+}
+ul.uib-datepicker-popup {
+  padding-top: 15px;
+  padding-left: 0px;
+  list-style-type: none;
+}
+div.uib-datepicker {
+  width: 200px;
+  margin-right: 0;
+}
+input.date-input {
+  width: 220px;
+}
+td {
+  input.form-control {
+    margin-left: 30px;
+    margin-bottom: 10px;
+  }
+}
+div.comments {
+  div {
+    display: flex;
+  }
+  span.date {
+    font-size: 0.9em;
+  }
 }
